--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/caja-de-regalo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<title>G I F T L Y</title>
 	</head>
 	<body>
