--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
 		<link rel="icon" type="image/svg+xml" href="/caja-de-regalo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
 		<title>G I F T L Y</title>
 	</head>
 	<body>
